# ttx

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .envrc  .gitignore  .prettierrc  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README_8md.html  absolute__position_8h.html  absolute__position_8h.js  absolute__position_8h_source.html  annotated.html  annotated_dup.js  architecture__docs_8md.html  build_8md.html  capabilities_8h.html  capabilities_8h.js  capabilities_8h_source.html  capability_8cpp.html  capability_8cpp.js  capability_8h.html  capability_8h.js  capability_8h_source.html  capture_8md.html  cell_8h.html  cell_8h.js  cell_8h_source.html  classes.html  classttx_1_1Clipboard-members.html  classttx_1_1Clipboard.html  classttx_1_1Clipboard.js  classttx_1_1EscapeSequenceParser-members.html  classttx_1_1EscapeSequenceParser.html  classttx_1_1EscapeSequenceParser.js  classttx_1_1FeatureDetector-members.html  classttx_1_1FeatureDetector.html  (+688 more)
.github/: codecov.yml
.github/workflows/: darwin.yml  docs.yml  gen.yml  latest.yml  lint.yml  linux.yml
docs/: Doxyfile.in  header.html  layout.xml
docs/pages/: architecture_docs.md  build.md  capture.md  configuration.md  developing.md  install.md  linux_startup.md  osc_8671.md  server.md  terminal.md  terminal_escape_sequences.md
lib/: CMakeLists.txt
lib/include/ttx/: clipboard.h  cursor_style.h  direction.h  escape_sequence_parser.h  features.h  focus_event.h  focus_event_io.h  graphics_rendition.h  key.h  key_event.h  key_event_io.h  layout.h  layout_json.h  modifiers.h  mouse.h  mouse_click_tracker.h  mouse_event.h  mouse_event_io.h  palette.h  pane.h  params.h  paste_event.h  paste_event_io.h  popup.h  renderer.h  size.h  terminal.h  terminal_input.h  utf8_stream_decoder.h
lib/include/ttx/terminal/: absolute_position.h  capability.h  cell.h  color.h  cursor.h  features.h  graphics_rendition.h  hyperlink.h  id_map.h  multi_cell_info.h  palette.h  reflow_result.h  row.h  row_group.h  screen.h  scroll_back.h  scroll_region.h  selection.h  semantic_prompt.h
lib/include/ttx/terminal/escapes/: device_attributes.h  device_status.h  mode.h  osc_133.h  osc_2.h  osc_21.h  osc_52.h  osc_66.h  osc_7.h  osc_8.h  osc_8671.h  size_report.h  terminfo_string.h
lib/src/: CMakeLists.txt  clipboard.cpp  escape_sequence_parser.cpp  feature.cpp  features.cpp  focus_event_io.cpp  graphics_rendition.cpp  key_event_io.cpp  layout.cpp  mode.cpp  mouse_click_tracker.cpp  mouse_event_io.cpp  pane.cpp  params.cpp  paste_event_io.cpp  popup.cpp  renderer.cpp  terminal.cpp  terminal_input.cpp  utf8_stream_decoder.cpp
lib/src/terminal/: capabilities.h  capability.cpp  color.cpp  graphics_rendition.cpp  palette.cpp  reflow_result.cpp  row_group.cpp  screen.cpp  scroll_back.cpp  semantic_prompt.cpp
lib/src/terminal/escapes/: device_attributes.cpp  device_status.cpp  mode.cpp  osc_133.cpp  osc_2.cpp  osc_21.cpp  osc_52.cpp  osc_66.cpp  osc_7.cpp  osc_8.cpp  osc_8671.cpp  size_report.cpp  terminfo_string.cpp
lib/test/: CMakeLists.txt  test_escape_sequence_parser.cpp  test_focus_event_io.cpp  test_graphics_rendition.cpp  test_key_event_io.cpp  test_layout.cpp  test_mouse_event_io.cpp  test_params.cpp  test_paste_event_io.cpp  test_terminal_input.cpp  test_utf8_stream_decoder.cpp
lib/test/cases/: basic-osc-66.expected.ansi  basic-osc-66.input.ansi  git-log-with-scroll.expected.ansi  git-log-with-scroll.input.ansi  git-status.expected.ansi  git-status.input.ansi  hyperlink-demo.expected.ansi  hyperlink-demo.input.ansi  nix-output-monitor.expected.ansi  nix-output-monitor.input.ansi  nvim-basic.expected.ansi  nvim-basic.input.ansi  open-code.expected.ansi  open-code.input.ansi  vttest-1-1.expected.ansi  vttest-1-1.input.ansi  vttest-1-2.expected.ansi  vttest-1-2.input.ansi  vttest-1-3.expected.ansi  vttest-1-3.input.ansi  vttest-1-4.expected.ansi  vttest-1-4.input.ansi  vttest-1-5.expected.ansi  vttest-1-5.input.ansi  vttest-1-6.expected.ansi  vttest-1-6.input.ansi  vttest-11-1-2-3.expected.ansi  vttest-11-1-2-3.input.ansi  vttest-11-7-2.expected.ansi  vttest-11-7-2.input.ansi  vttest-2-1.expected.ansi  vttest-2-1.input.ansi  vttest-2-10.expected.ansi  vttest-2-10.input.ansi  vttest-2-11.expected.ansi  vttest-2-11.input.ansi  vttest-2-12.expected.ansi  vttest-2-12.input.ansi  vttest-2-13.expected.ansi  vttest-2-13.input.ansi  (+26 more)
lib/test/src/: test_capability.cpp  test_clipboard.cpp  test_device_attributes.cpp  test_device_status.cpp  test_escape_sequence_parser.cpp  test_focus_event_io.cpp  test_graphics_rendition.cpp  test_id_map.cpp  test_key_event_io.cpp  test_layout.cpp  test_mode.cpp  test_mouse_click_tracker.cpp  test_mouse_event_io.cpp  test_osc_133.cpp  test_osc_2.cpp  test_osc_21.cpp  test_osc_52.cpp  test_osc_66.cpp  test_osc_7.cpp  test_osc_8.cpp  test_osc_8671.cpp  test_params.cpp  test_paste_event_io.cpp  test_popup.cpp  test_reflow_result.cpp  test_screen.cpp  test_size_report.cpp  test_terminal_input.cpp  test_terminfo_string.cpp  test_utf8_stream_decoder.cpp
meta/cmake/: coverage.cmake  (+11 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  (+156 more)
src/: CMakeLists.txt  action.h  actions.cpp  actions.h  built_in_themes.cpp  client.cpp  client.h  colors.h  config.h  config_json.cpp  config_json.h  escape_sequence_parser.cpp  escape_sequence_parser.h  fzf.cpp  fzf.h  graphics_rendition.cpp  graphics_rendition.h  input.cpp  input.h  input_mode.h  key.h  key_bind.cpp  key_bind.h  key_event.h  layout_state.cpp  layout_state.h  pane.cpp  pane.h  params.cpp  params.h  render.cpp  render.h  renderer.cpp  renderer.h  save_layout.cpp  save_layout.h  server.cpp  server.h  session.cpp  session.h  (+10 more)
test/: CMakeLists.txt
(+22 files in other folders)
